# HPC

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md
.github/workflows/: docker.yml  tests.yml
L1/audios/: test_audios.sh
L1/code/: .gitignore  CMakeLists.txt  README.md  build-and-run.sh  build-and-test.sh  libsndfile_demo.c
L1/code/.cache/clangd/index/: dtmf.h.52CFCBD778F3BC82.idx  dtmf_common.c.8A4C3E2CEF9AC060.idx  dtmf_common.h.8F3519D49AAFCB6B.idx  dtmf_decode_fft.c.62C9D763A313708A.idx  dtmf_decode_goertzel.c.409EB81A54F88A34.idx  dtmf_encode.c.E56F705316E1F78A.idx  io_utils.c.DFFE969F6247B610.idx  io_utils.h.03A1C9A935A03C2B.idx  main.c.9DBD10BE599DB662.idx
L1/code/include/: dtmf_utils.h
L1/code/include/lib/: dtmf.h
L1/code/src/: CMakeLists.txt  arg_parser.h  io_utils.c  main.c  utils.c
L1/code/src/lib/: CMakeLists.txt  dtmf_common.c  dtmf_common.h  dtmf_decode_fft.c  dtmf_decode_goertzel.c  dtmf_encode.c
L1/code/test/: CMakeLists.txt  test_decode.cpp
L1/code/test/samples/: audio_files.tsv
L1/report/: plot.py
code/: .clang-format  CMakeLists.txt  Dockerfile  HPC.txt  README.md  build-and-perfmon.sh  build-and-run.sh  build-and-test.sh  likwid_demo.c
code/include/: dtmf_utils.h
code/include/lib/: dtmf.h
code/src/: CMakeLists.txt  main.c
code/src/lib/: dtmf_common.c  dtmf_common.h  dtmf_decode_fft.c  dtmf_decode_goertzel.c  dtmf_encode.c  dtmf_error.h
code/test/: CMakeLists.txt  params_decode.tsv  test_decode.cpp  test_encode.cpp
compiler/code/: branch.c  normalize.c  recursion.c  unswitch.c
compiler/report/: report.typ
dtmf/: Dockerfile
dtmf/code/: .gitignore  CMakeLists.txt  README.md  build-and-perfmon.sh  build-and-run.sh  build-and-test.sh  perf.sh  profile.sh  valgrind.sh
dtmf/code/include/: dtmf_utils.h
dtmf/code/include/lib/: dtmf.h  dtmf_utils.h
dtmf/code/reports/benchmark/: benchmark.csv
dtmf/code/reports/valgrind/: dtmf_encdec-enc_cachegrind.log.annotated  dtmf_encdec-enc_cachegrind.out  dtmf_encdec-enc_callgrind.log.annotated  dtmf_encdec-enc_callgrind.out  dtmf_encdec-fft_cachegrind.log.annotated  dtmf_encdec-fft_cachegrind.out  dtmf_encdec-fft_callgrind.log.annotated  dtmf_encdec-fft_callgrind.out  dtmf_encdec-goertzel_cachegrind.log.annotated  dtmf_encdec-goertzel_cachegrind.out  dtmf_encdec-goertzel_callgrind.log.annotated  dtmf_encdec-goertzel_callgrind.out
dtmf/code/scripts/: gen_fir_coefs.py
dtmf/code/scripts/benchmark/: benchmark.sh  gen_samples.sh  plot.py
dtmf/code/src/: CMakeLists.txt  arg_parser.c  arg_parser.h  args.c  args.h  dtmf_utils.c  main.c  utils.c
dtmf/code/src/lib/: dtmf_common.c  dtmf_common.h  dtmf_decode_fft.c  dtmf_decode_goertzel.c  dtmf_encode.c  dtmf_utils.c
dtmf/code/test/: CMakeLists.txt  params_encode.tsv  test_decode.cpp  test_encode.cpp
dtmf/code/test/samples/: decode_all.sh
dtmf/report/: benchmark.sh  report.typ
dtmf/report/L1/: benchmark.csv
dtmf/report/L2/: input.txt
dtmf/scripts/: profile.sh
parallelism/code/: CMakeLists.txt  benchmark.sh  plot.py
parallelism/code/inputs/: acgt_1000000  acgt_131072  acgt_262144  acgt_32768  acgt_65536  ecoli_1000000  ecoli_32768  pi_131072  pi_32768  text_1000000  text_32768
parallelism/code/reports/: benchmark.csv
parallelism/code/src/: main_v1.c  main_v2.c
powercap/: measure.py  power_measurements.csv
powercap/report/: report.typ
powercap/segmented_original/code/: CMakeLists.txt
powercap/segmented_original/code/include/: perf_manager.h
powercap/segmented_original/code/src/: k-means.c  perf_manager.c
powercap/segmented_simd/: CMakeLists.txt
powercap/segmented_simd/include/: k-means.h
powercap/segmented_simd/src/: k-means.c
profiling/code/: perf.sh  valgrind.sh
profiling/code/reports/valgrind/: analyze_cachegrind.log.annotated  analyze_cachegrind.out  analyze_callgrind.log.annotated  analyze_callgrind.out  create-sample_cachegrind.log.annotated  create-sample_cachegrind.out  create-sample_callgrind.log.annotated  create-sample_callgrind.out  small_input.txt
profiling/report/: report.typ
report/L2/: input_roofline.txt  likwid-topology.txt  report.typ  roofline_gen.py
scripts/: gtest_report.xslt
simd/code/: .clangd  CMakeLists.txt  build-and-run.sh  build-and-test.sh  build.sh
simd/code/include/: k-means.h
simd/code/src/: k-means.c  main.c
simd/code/test/: .gitignore  benchmark.csv  benchmark.sh  test.sh
simd/code_img_processing/: CMakeLists.txt
simd/code_img_processing/src/: main.c
simd/grayscale/: CMakeLists.txt  build-and-run.sh  build-and-test.sh
simd/grayscale/include/: grayscale.h
simd/grayscale/src/: grayscale_c.c  grayscale_simd.c  main.c
simd/grayscale/test/: benchmark.csv  benchmark.sh  generate.sh  plot.py  test.sh
simd/report/: report.typ  segmented_gprof_analysis.txt
simd/segmented/: .gitignore  CMakeLists.txt  build-and-run.sh
simd/segmented/src/: k-means.c
simd/segmented/test/: benchmark.sh  plot.py  test.sh
